CPFED-4017: continued troubleshooting tab order and visibility issue

--- a/elements/pfe-primary-detail/src/pfe-primary-detail.scss
+++ b/elements/pfe-primary-detail/src/pfe-primary-detail.scss
@@ -87,7 +87,7 @@ $LOCAL-VARIABLES: (
   }
 }
 
-::slotted([aria-hidden='false']) {
+::slotted(.a11y-visible) {
   display: block!important;
 
   :host([consistent-height]) & {
